<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout_initial_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/initial_page_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_txt_title"
        android:textColor="#eeeeee"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/initial_page_text_title">

        <Button
            android:id="@+id/initial_page_btn_facts"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_btn_facts"
            android:textSize="28sp"
            android:textColor="#e0e0e0"
            android:backgroundTint="#9e9e9e"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"/>
        <Button
            android:id="@+id/initial_page_btn_more"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_btn_more"
            android:textSize="28sp"
            android:textColor="#e0e0e0"
            android:backgroundTint="#9e9e9e"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/initial_page_btn_resume"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_btn_resume"
            android:textSize="28sp"
            android:textColor="#e0e0e0"
            android:backgroundTint="#9e9e9e"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/initial_page_btn_weather"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_btn_weather"
            android:textSize="28sp"
            android:textColor="#e0e0e0"
            android:backgroundTint="#9e9e9e"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/initial_page_btn_investment"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_btn_investment"
            android:textSize="28sp"
            android:textColor="#e0e0e0"
            android:backgroundTint="#9e9e9e"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/initial_page_btn_settings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_btn_settings"
            android:textSize="28sp"
            android:textColor="#e0e0e0"
            android:backgroundTint="#9e9e9e"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</RelativeLayout>