<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout_facts_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/facts_page_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facts_txt_title"
        android:textColor="#1a237e"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"/>
    <TextView
        android:id="@+id/facts_page_text_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facts_txt_myname"
        android:textColor="#5d4037"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_below="@id/facts_page_text_title"/>
    <ImageButton
        android:id="@+id/facts_page_ibtn_me"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/wenhui_photo"
        android:backgroundTint="#ffe57f"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_below="@id/facts_page_text_title"/>
    <TextView
        android:id="@+id/facts_page_text_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facts_txt_friendname"
        android:textColor="#5d4037"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_below="@id/facts_page_ibtn_me"/>
    <ImageButton
        android:id="@+id/facts_page_ibtn_friend"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/friend_photo"
        android:backgroundTint="#ffe57f"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_below="@id/facts_page_ibtn_me"/>
    <TextView
        android:id="@+id/facts_page_text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click the photo to know more details"
        android:textColor="#1a237e"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_below="@id/facts_page_ibtn_friend"/>
</RelativeLayout>